--- a/Menu/.classpath
+++ b/Menu/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="E:/Git/Menu/Menu/jackson-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="E:/Git/Menu/Menu/5.1.33/mysql-connector-java-5.1.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
