--- a/Menu/.classpath
+++ b/Menu/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="E:/Git/Menu/Menu/jackson-all-1.9.0.jar"/>
 	<classpathentry kind="lib" path="E:/Git/Menu/Menu/5.1.33/mysql-connector-java-5.1.33.jar"/>
+	<classpathentry kind="lib" path="C:/Users/skaraltc/Downloads/com.umlet.plugin_13.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
